=========
CHANGELOG
=========

2.3.3+dev0 (XXXX-XX-XX)
=======================

*


2.3.3      (2021-09-03)
=======================

** New **

* Display custom columns in attachment list

2.3.2 (2021-06-09)
==================

* Add a bootstrap-4-confirm


2.3.1 (2021-06-03)
==================

** New **

* Support django 3.2 and python 3.9
* Drop support Python 3.5


2.2.6 (2020-11-24)
==================

** New **

* Support for django 3.1


2.2.5 (2020-05-15)
==================

** New **

* Support for django 2.2 and 3.0
* Drop Django 1.11, 2.0, 2.1 and python 2 support
* Set automatic is_image db column

2.2.4 (2020-03-10)
==================

** Fixes **

* Show attachment file, video or link widget as required


2.2.3 (2019-12-31)
==================

** Fixes **

* Fix requirements for Django 2


2.2.2 (2019-10-08)
==================

** Fixes **

* Do not set author to current username by default
* Fix mode preselection


2.2.1 (2019-01-07)
==================

** Fixes **

* Fix permissions change, delete and delete_others


2.2.0 (2018-11-07)
==================

** New **

* Support Python3, Django 2.0 and 2.1
* Drop Django 1.8, 1.9 and 1.10 support


2.1.2 (2018-03-25)
==================

** New **

* Support Django 1.8 to 1.11


2.1.1 (2017-03-23)
==================

** Fixes **

* Fix releases required includes


2.1.0 (2017-03-23)
==================

** New **

* From now, Attachment model support external picture URLs


2.0.0 (2017-02-21)
==================

** BREAKING CHANGES **

* Provide an abstract model. Users are required to define their own
  Attachment model


1.0.0 (2017-01-14)
==================

** BREAKING CHANGES **

* Remove support of Django <= 1.7
* Rename parameter 'module_name' as 'model_name' in urls

** New **

* Support Django 1.8
* Add initial migration (Caution! it depends on app settings)


0.5.0 (2016-01-11)
==================

** New **

* Add a command to clean obsolete files


0.4.1 (2015-03-20)
==================
