@@ -107,6 +107,9 @@ STATIC_URL = '/static/'
 PAPERCLIP_ENABLE_VIDEO = True
 PAPERCLIP_FILETYPE_MODEL = 'test_app.FileType'
 PAPERCLIP_ATTACHMENT_MODEL = 'test_app.Attachment'
+PAPERCLIP_MAX_ATTACHMENT_WIDTH = 1280
+PAPERCLIP_MAX_ATTACHMENT_HEIGHT = 1280
+PAPERCLIP_RESIZE_ATTACHMENTS_ON_UPLOAD = False
 
 # fix for project created django < 3.2
 DEFAULT_AUTO_FIELD = 'django.db.models.AutoField'
